@@ -28,6 +28,7 @@ import com.twitter.scalding.Args
 import common.utils.ConversionUtils
 import common.enrichments.PrivacyEnrichments.AnonOctets
 import AnonOctets._
+import com.snowplowanalytics.snowplow.enrich.common.enrichments.EventEnrichments
 
 // This project
 import utils.ScalazArgs
@@ -111,7 +112,7 @@ object EtlJobConfig {
     val outFolder = args.requiredz("output_folder")
     val badFolder = args.requiredz("bad_rows_folder")
     val anonOctets = args.requiredz("anon_ip_octets").flatMap(q => getAnonOctets(q))
-    val etlTstamp = args.requiredz("etl_tstamp").flatMap(t => extractTimestamp("etl_tstamp", t))
+    val etlTstamp = args.requiredz("etl_tstamp").flatMap(t => EventEnrichments.extractTimestamp("etl_tstamp", t))
     val exceptionsFolder = args.optionalz("exceptions_folder")
     
     (inFolder.toValidationNel |@| inFormat.toValidationNel |@| maxmindFile.toValidationNel |@| outFolder.toValidationNel |@| badFolder.toValidationNel |@| anonOctets.toValidationNel |@| etlTstamp.toValidationNel |@| exceptionsFolder.toValidationNel) { EtlJobConfig(_,_,_,_,_,_,_,_) }
