@@ -43,6 +43,7 @@ object LateOct2013CfLineSpec {
   val expected = List(
     "pbzsite",
     "web",
+    EtlTimestamp,
     "2013-10-22 00:41:30.000",
     "2013-10-22 00:41:53.725",
     "page_view",
